<resources>
    <string name="app_name">予定表アプリ</string>
    <string name="work_text">勤怠</string>
    <string name="detail_text">メモ</string>
    <string name="input_text">登録</string>
    <string name="cancel_text">キャンセル</string>

    <string-array name="list">
        <item>出社</item>
        <item>テレワーク</item>
        <item>休み</item>
    </string-array>

    <string-array name="partlist">
        <item>第一システム担当</item>
        <item>第二システム担当</item>
        <item>第三システム担当</item>
        <item>第四システム担当</item>
        <item>第五システム担当</item>
    </string-array>

    <string name="name_text">姓名(漢字)</string>
    <string name="kana_text">姓名(カナ)</string>
    <string name="phonenumber_text">電話番号\n(ハイフンなし)</string>
    <string name="mail_text">メールアドレス</string>
    <string name="part_text">担当</string>
    <string name="schedulebottuon">スケジュール</string>

    <string name="action_cansel">戻る</string>
    <string name="action_add">メンバー追加</string>
    <string name="outlook_login">Outlookの予定表をアプリに同期するためには、Outlookへのログインが必要です。</string>

    <string name="authorize_url">https://login.microsoftonline.com/common/oauth2/v2.0/authorize</string>
    <string name="access_token_url">https://login.microsoftonline.com/common/oauth2/v2.0/token</string>
    <string name="calendars_url">https://graph.microsoft.com/v2.0/me/calendars</string>
    <string name="events_url">https://graph.microsoft.com/v1.0/me/events?$select=subject,body,bodyPreview,organizer,attendees,start,end,location</string>

    <string name="client_id">87470534-aa63-4f3b-9b87-5625a164ca53</string>
    <string name="redirect_uri">https://scheduleapp/auth</string>
    <string name="client_secret">rDqT-G.oE56K1s01D_aJ~c0-Vdx1KnOs.B</string>

    <string name="login">Outlookへログイン</string>
    <string name="get_access_token">アクセストークンの取得</string>
    <string name="call_api">Apiをコール</string>

    <string name="error_message">エラーが発生しました。\n%1$s</string>
</resources>
