<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:minHeight="?android:actionBarSize"
        android:theme="@style/MyCustomTheme.Toolbar"
        >
    </Toolbar>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:text="@string/name_text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/kana_text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/kana_text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/phonenumber_text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/phonenumber_text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kana_text" />

    <TextView
        android:id="@+id/mail_text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/mail_text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_text" />

    <TextView
        android:id="@+id/part_text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/part_text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_text" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/kana_edit"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/kana_text"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <EditText
        android:id="@+id/phonenumber_edit"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/phonenumber_text"
        app:layout_constraintTop_toBottomOf="@+id/kana_edit" />

    <EditText
        android:id="@+id/mail_edit"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/mail_text"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_text" />

    <Spinner
        android:id="@+id/part_edit"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:entries="@array/partlist"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/part_text"
        app:layout_constraintTop_toBottomOf="@+id/mail_edit" />

    <Button
        android:id="@+id/schedulebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="スケジュール"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/part_text" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="戻る"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/schedulebutton" />


</android.support.constraint.ConstraintLayout>